--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,7 +40,10 @@
       "description": "This action cannot be undone. This will permanently delete your account and your data from our servers.",
       "confirm": "Yes, delete account",
       "cancel": "Cancel"
-    }
+    },
+    "snow_effect_title": "Holiday Snow Effect",
+    "snow_effect_desc": "Enable snowflakes falling gently in the background.",
+    "snow_effect_tip": "Tip: Looks best in dark mode."
   },
   "languages": {
     "es": "Spanish",
@@ -132,7 +135,31 @@
     "meal_streak": "Meal Streak",
     "total_badges": "Total Badges",
     "hydration_streak": "Hydration Streak",
-    "weight_loss": "Weight Loss"
+    "weight_loss": "Weight Loss",
+    "notification_title": "Badge Unlocked!"
+  },
+  "badge_names": {
+    "streak_1": { "name": "First Day", "desc": "Log your first day." },
+    "streak_3": { "name": "Three in a Row", "desc": "Keep a 3-day streak." },
+    "streak_6": { "name": "Almost a Week", "desc": "Maintain a 6-day streak." },
+    "streak_10": { "name": "Double Digits", "desc": "Reach a 10-day streak." },
+    "streak_30": { "name": "One Month Streak", "desc": "A full month! Keep it up." },
+    "streak_60": { "name": "Two Months", "desc": "Two months on a roll!" },
+    "streak_80": { "name": "On Fire", "desc": "An 80-day streak." },
+    "streak_100": { "name": "The 100 Club", "desc": "100 days in a row!" },
+    "streak_200": { "name": "Unstoppable", "desc": "An epic 200-day streak." },
+    "streak_300": { "name": "Pure Consistency", "desc": "Incredible 300-day streak." },
+    "streak_400": { "name": "Legend", "desc": "An unstoppable 400-day streak." },
+    "streak_500": { "name": "Beyond", "desc": "You surpassed 500 days. Wow!" },
+    "water_1": { "name": "First Glass", "desc": "Log water for 1 day." },
+    "water_3": { "name": "Consistent Hydration", "desc": "3-day water streak." },
+    "water_5": { "name": "Healthy Habit", "desc": "5-day water streak." },
+    "water_10": { "name": "Water Master", "desc": "10-day water streak." },
+    "weight_1": { "name": "First Kilo", "desc": "Lose your first kilogram." },
+    "weight_15": { "name": "15kg Goal", "desc": "Reach 15kg lost." },
+    "weight_30": { "name": "30kg Goal", "desc": "You've lost 30kg." },
+    "weight_50": { "name": "50kg Goal", "desc": "Incredible! 50kg down." },
+    "weight_70": { "name": "70kg Goal", "desc": "A monumental achievement: 70kg." }
   },
   "exercise": {
     "title": "Log Exercise",
