[dyad] Updating streak badges - wrote 19 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -146,11 +146,15 @@
     "streak_10": { "name": "Double Digits", "desc": "Reach a 10-day streak." },
     "streak_30": { "name": "One Month Streak", "desc": "A full month! Keep it up." },
     "streak_60": { "name": "Two Months", "desc": "Two months on a roll!" },
-    "streak_80": { "name": "On Fire", "desc": "An 80-day streak." },
+    "streak_90": { "name": "Three Months", "desc": "Ninety days of consistency." },
     "streak_100": { "name": "The 100 Club", "desc": "100 days in a row!" },
+    "streak_150": { "name": "Pure Dedication", "desc": "You reached 150 days." },
     "streak_200": { "name": "Unstoppable", "desc": "An epic 200-day streak." },
+    "streak_250": { "name": "Halfway There", "desc": "250 days! Impressive." },
     "streak_300": { "name": "Pure Consistency", "desc": "Incredible 300-day streak." },
+    "streak_350": { "name": "Year Insight", "desc": "350 days, almost there." },
     "streak_400": { "name": "Legend", "desc": "An unstoppable 400-day streak." },
+    "streak_450": { "name": "Master", "desc": "450 days of total discipline." },
     "streak_500": { "name": "Beyond", "desc": "You surpassed 500 days. Wow!" },
     "water_1": { "name": "First Glass", "desc": "Log water for 1 day." },
     "water_3": { "name": "Consistent Hydration", "desc": "3-day water streak." },
