--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -146,11 +146,15 @@
     "streak_10": { "name": "Doble Dígito", "desc": "Alcanza una racha de 10 días." },
     "streak_30": { "name": "Racha Mensual", "desc": "¡Un mes completo! Sigue así." },
     "streak_60": { "name": "Dos Meses", "desc": "¡Dos meses seguidos!" },
-    "streak_80": { "name": "En Llamas", "desc": "Una racha de 80 días." },
+    "streak_90": { "name": "Tres Meses", "desc": "Noventa días de constancia." },
     "streak_100": { "name": "Club 100", "desc": "¡100 días seguidos!" },
+    "streak_150": { "name": "Dedicación Pura", "desc": "Has alcanzado 150 días." },
     "streak_200": { "name": "Imparable", "desc": "Una racha épica de 200 días." },
-    "streak_300": { "name": "Pura Constancia", "desc": "Increíble racha de 300 días." },
+    "streak_250": { "name": "Medio Camino", "desc": "¡250 días! Impresionante." },
+    "streak_300": { "name": "Casi un Año", "desc": "Increíble racha de 300 días." },
+    "streak_350": { "name": "Año a la Vista", "desc": "350 días, casi lo tienes." },
     "streak_400": { "name": "Leyenda", "desc": "Una racha imparable de 400 días." },
+    "streak_450": { "name": "Maestro", "desc": "450 días de disciplina total." },
     "streak_500": { "name": "Más Allá", "desc": "Has superado los 500 días. ¡Wow!" },
     "water_1": { "name": "Primer Vaso", "desc": "Registra agua por 1 día." },
     "water_3": { "name": "Hidratación Constante", "desc": "Racha de 3 días de agua." },
