--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -158,7 +158,7 @@
     "streak_500": { "name": "Beyond", "desc": "You surpassed 500 days. Wow!" },
     "water_1": { "name": "First Glass", "desc": "Log water for 1 day." },
     "water_3": { "name": "Consistent Hydration", "desc": "3-day water streak." },
-    "water_5": { "name": "Healthy Habit", "desc": "5-day water streak." },
+    "water_6": { "name": "Hydration Pro", "desc": "6-day water streak." },
     "water_10": { "name": "Water Master", "desc": "10-day water streak." },
     "weight_1": { "name": "First Kilo", "desc": "Lose your first kilogram." },
     "weight_15": { "name": "15kg Goal", "desc": "Reach 15kg lost." },
