--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -274,7 +274,8 @@
     "healthy": "Healthy",
     "overweight": "Overweight",
     "obesity": "Obesity",
-    "tooltip": "The Body Mass Index (BMI) uses your height and weight to estimate if your weight is healthy. Categories: Underweight (<18.5), Healthy (18.5-24.9), Overweight (25-29.9), Obesity (≥30)."
+    "tooltip": "The Body Mass Index (BMI) uses your height and weight to estimate if your weight is healthy. Categories: Underweight (<18.5), Healthy (18.5-24.9), Overweight (25-29.9), Obesity (≥30).",
+    "dialog_action": "Got it"
   },
   "manual_food": {
     "title": "Add Food Manually",
