--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -160,11 +160,11 @@
     "water_3": { "name": "Consistent Hydration", "desc": "3-day water streak." },
     "water_6": { "name": "Hydration Pro", "desc": "6-day water streak." },
     "water_10": { "name": "Water Master", "desc": "10-day water streak." },
-    "weight_1": { "name": "First Kilo", "desc": "Lose your first kilogram." },
-    "weight_10": { "name": "10kg Goal", "desc": "Reach 10kg lost." },
-    "weight_20": { "name": "20kg Goal", "desc": "You've lost 20kg." },
-    "weight_50": { "name": "50kg Goal", "desc": "Incredible! 50kg down." },
-    "weight_70": { "name": "70kg Goal", "desc": "A monumental achievement: 70kg." }
+    "weight_1": { "name": "First Kilogram", "desc": "Lose your first kilogram." },
+    "weight_10": { "name": "10 kg Goal", "desc": "Reach 10 kg lost." },
+    "weight_20": { "name": "20 kg Goal", "desc": "You've lost 20 kg." },
+    "weight_50": { "name": "50 kg Goal", "desc": "Incredible! 50 kg down." },
+    "weight_70": { "name": "70 kg Goal", "desc": "A monumental achievement: 70 kg." }
   },
   "exercise": {
     "title": "Log Exercise",
